# pongo

./: .gitignore  Cargo.toml  README.md  justfile  tailwind.config.js
examples/: basic.rs
src/: api.rs  base.rs  dashboard.rs  database.rs  lib.rs  model.rs  starstraw.rs
static/: input.css
static/js/: footer.js  starstraw.js  table_view.js
templates/: auth.html  bare_base.html  base.html  homepage.html  login.html  profile.html  register.html  table.html
