[package]
name = "pongo"
description = "Intelligent Dorsal admin interface"
authors = ["hkau"]
license = "MIT"

version = "0.1.3"
edition = "2021"

documentation = "https://docs.rs/pongo"
repository = "https://github.com/hkauso/pongo"
categories = ["web-programming", "database"]

[package.metadata.docs.rs]
features = ["sqlite"]
no-default-features = true

[[example]]
name = "basic"
crate-type = ["bin"]

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
# default = ["dorsal/sqlite"] # for development

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
dorsal = { version = "0.1.7", default-features = false }
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
